[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mj-sapien"
dynamic = ["version"]
description = "TBD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # utilities/tooling
    "tqdm>=4.67.3",
    "tyro>=1.0.13",
    "viser>=1.0.26",
    # handling numbers
    "numpy>=2",
    "torch>=2.7.0",
    # simulation
    "mujoco-warp",
    # RL and gym
    "gymnasium>=1.1"
]

[tool.hatch.version]
path = "src/mj_sapien/__init__.py"

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "pytest>=9.0.3",
    "pre-commit>=4.5.1"
]
[tool.ruff.lint]
select = [
    "E", "F", "B", "I",
]
[tool.ruff.lint.pycodestyle]
max-line-length = 100
